# Beryll_engine

./: CMakeLists.txt  README.md
libs/: LibsHeaders.h  list.txt
libs/SDL2_image/: Android.mk  CMakeLists.txt
libs/SDL2_image/jpeg/: Android.mk  CMakeLists.txt
libs/SDL2_image/png/: CMakeLists.txt
libs/SDL2_mixer/: Android.mk  CMakeLists.txt
libs/SDL2_mixer/mp3/: Android.mk  CMakeLists.txt
libs/SDL2_net/: CmakeLists.txt
libs/assimp/: CMakeLists.txt
libs/assimp/code/: CMakeLists.txt
libs/assimp/code/Common/: ImporterRegistry.cpp
libs/assimp/contrib/zlib/: zlib.h
libs/bullet/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  imgui.h  imgui_internal.h  imgui_widgets.cpp
libs/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
libs/sqlite/: CMakeLists.txt
src/: CppHeaders.h  EngineHeaders.h
src/Beryll/Core/: EventHandler.cpp  EventHandler.h  GameLoop.cpp  GameLoop.h  GameObject.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  RandomGenerator.cpp  RandomGenerator.h  SoundsManager.cpp  SoundsManager.h  TimeStep.cpp  TimeStep.h  Timer.h  Window.cpp  Window.h  stuff.txt
src/Beryll/GUI/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  DemoImGUI.cpp  DemoImGUI.h  DrawAnyFunction.cpp  DrawAnyFunction.h  GUIObject.h  MainImGUI.cpp  MainImGUI.h  Text.cpp  Text.h
src/Beryll/GameObjects/: AnimatedObject.cpp  AnimatedObject.h  CollidingAnimatedObject.cpp  CollidingAnimatedObject.h  CollidingSimpleObject.cpp  CollidingSimpleObject.h  SceneObject.h  SimpleObject.cpp  SimpleObject.h
src/Beryll/Physics/: Physics.cpp  Physics.h
src/Beryll/Platform/AndroidGLES/: AndroidGLESBuffer.cpp  AndroidGLESBuffer.h  AndroidGLESImGUI.cpp  AndroidGLESImGUI.h  AndroidGLESShader.cpp  AndroidGLESShader.h  AndroidGLESTexture.cpp  AndroidGLESTexture.h  AndroidGLESVertexArray.cpp  AndroidGLESVertexArray.h  AndroidGLESWindow.cpp  AndroidGLESWindow.h
src/Beryll/Renderer/: Buffer.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.h  Texture.h  VertexArray.h  info.txt
src/Beryll/Utils/: File.h  Matrix.h  Quaternion.h
